# RDS

./: .gitignore  CMakeLists.txt  Doxyfile.config  GenerateDoxygen.bat  RDS.cmake  RDS_CMakeVars.cmake  README.md
RDS_Gtest/: CMakeLists.txt  RDS_Gtest.cmake
RDS_Gtest/src/: SimpleGtest.cpp  Test.cpp
RDS_Gtest/src/Algorithm/: Fill.cpp
RDS_Gtest/src/List/: Ctors.cpp  ElementAccess.cpp  Iterator.cpp  List.cpp  NodeManagement.cpp
RDS_Gtest/src/Node_D/: Ctor.cpp
RDS_Gtest/src/Vector/: Ctor.cpp
RDS_Test/: CMakeLists.txt  RDS_Test-macros.cmake  RDS_Test.cmake
RDS_Test/src/: SimpleTest.cc  array.cc  cbtree.cc  vector.cc
RDT/: CMakeLists.txt  RDT.cmake
RDT/include/: RDT_CoreDefs.h
RDT/src/: Test.cpp
RDT/src/Algorithm/: MinMax.cpp
RDT/src/Allocator/: Mallocator.cpp
RDT/src/Cores/: Helpers.cpp
RDT/src/Iterator/: Deref_BeginEnd.cpp  Deref_Invalid.cpp  Iterator.cpp
RDT/src/List/: Basic.cpp  Basic_Test.cpp  Capacity.cpp  Ctor.cpp  Iterators.cpp  List.cpp  Modifier.cpp  NodeManagement.cpp  Operation.cpp
RDT/src/MemoryManagement/: Allocator_Trait_Mallocator_Fundamental_Types.cpp  Mallocator_Fundamental_Types.cpp
RDT/src/Vector/: Access.cpp  Ctor.cpp
docs/: RValueReferenceExplained.md
docs/mds/: 2024-02-15.md  2024-02-16.md  Plans.md
include/: Iterator.hpp  List.hpp  List_ConstIterator.hpp  List_Iterator.hpp  Nallocator.hpp  Node_S.hpp  Pair.hpp  RDS_Concepts.h  RDS_CoreDefs.h  RDS_FVectors.h  RDS_Tags.h
include/Allocator/: Allocator.h  Allocator.hpp  Allocator_Trait.hpp  MAllocator.hpp  Nallocator.hpp
include/Arena/: Arena.hpp  ShortAlloc.hpp
include/Array/: Array.h  Array.hpp  Array_ConstIterator.hpp  Array_Iterator.hpp  Array_zero.hpp  IArray.h
include/Assertion/: Assertion.h
include/FVector2/: FVector2.h
include/FVector3/: FVector3.h
include/ForwardList/: ForwardList.hpp  ForwardList_ConstIterator.hpp  ForwardList_Iterator.hpp
include/Graph/: Graph.h
include/Iterator/: Iterator.hpp
include/List/: IList.h  List.hpp  ListNodes.h  List_ConstIterator.hpp  List_Iterator.hpp
include/Node/: Node_D.hpp
include/Node_D/: Node_D.hpp
include/Node_S/: Node_S.hpp
include/RDS/: AllocatorTraits.hpp  Array.hpp  Array_ConstIterator.hpp  FVector3.h  Iterator.hpp  MAllocator.hpp  RDS_CoreDefs.h  Tag.h  Tuple.hpp  Vector_Iterator.hpp  allocator.h  array.h  cbtree.h  heap.h  list.h  vector.h
include/RDS/Old/: Algorithm.hpp  Array.hpp  Array_Iterators.hpp  Assertion.h  Functional.hpp  Vector.hpp  Vector_ConstIterator.hpp
include/Tuple/: Tuple.hpp
include/TypeList/: TypeList.hpp
include/TypeTraits/: TypeTraits.hpp
include/Vector/: Vector.hpp  Vector_ConstIterator.hpp  Vector_Iterator.hpp
include/Vector2/: Vector2.h
include/Vector3/: Vector3.h
include/Vectors/: Vector2.h  Vector3.h
src/: Assertion.cpp  FVector3.cpp
src/Array/: Array.cpp
src/Assertion/: Assertion.cpp
src/FVector2/: FVector2.cpp
src/FVector3/: FVector3.cpp
src/Vector2/: Vector2.cpp
src/Vector3/: Vector3.cpp
src/Vectors/: Vector.h  Vector2.cpp  Vector3.cpp
test/: CMakeLists.txt  RDS_Gtest.cmake  Vectors_test.cpp
test/Array/: Array_Capacity_gtest.cpp  Array_ElementAccess_gtest.cpp  Array_test.cpp
test/Assertion/: Assertion_test.cpp
test/FVector3/: FVector3_gtest.cpp
test/Node_D/: Node_D_gtest.cpp
test/Vector3/: Vector3_test.cpp
test/ctest/: Array_ctest.cpp
test/gtest/: Arena_gtest.cpp  Array_gtest.cpp  FVector2_gtest.cpp  List_ConstIterator_gtest.cpp  List_Iterator_gtest.cpp  List_gtest.cpp  Vector2_gtest.cpp
test/gtest/Array/: Array_gtest.cpp
test/gtest/FVector2/: FVector2_gtest.cpp
test/gtest/List/: List_Compare_Equality_gtest.cpp  List_ConstIterator_gtest.cpp  List_EraseRange_gtest.cpp  List_Erase_gtest.cpp  List_Iterators_Equality_gtest.cpp
test/include/: RDS_TestCoreDefs.h
test/src/Array/: Iterator_Type.cpp
test/src/Iterator/: Deref_BeginEnd.cpp  Deref_Invalid.cpp
test/src/List/: Ctor.cpp  Erase_Range.cpp  Iterator_Ctor.cpp
